[Updates]2017 new year content updates ZD#62459

--- a/public/shpsholidayhometour.com/directions.htm
+++ b/public/shpsholidayhometour.com/directions.htm
@@ -20,47 +20,34 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
         <blockquote> 
           <p align="left"><br>
             <B><FONT size=3>Directions to the Tour</FONT></B></p>
-          <p>The tour starts on 41st Street between M and Folsom Boulevard. Look for the posted signs!</p>
-		  <p>The tour will wind its way through East Sacramento. You may start the home tour at any home, and parking is available outside all the tour homes and at the Holiday Caf&eacute; & Boutique, located at the school.</p>
-          <p><br>
-            <strong>From Auburn/Roseville </strong><br/>
-			Take the J Street exit off of the Capital City Freeway and turn right.<br/>
-      To go straight to the first home, continue east on J Street to 41st Street and turn right, the home will be on your right.
-			<!--Turn left on 39th Street for Sacred Heart School, Boutique and Caf&eacute;. To go straight to the first house, continue east on J Street to 41st Street and turn right for house #1.--></p>
-          <p><br>
-            <strong>From Placerville</strong><br>
-			Take Highway 50 to the 65th Street exit.<br/>
-			Turn right on 65th Street.<br/>
-			Go one block to Folsom Boulevard and turn left.<br/>
-      Go to 41st Street and turn right.<br/>
-      The home will be on your left, between M Street and J Street.</p>
-      <p><strong><br>
-      From Stockton and Elk Grove </strong><br>
-      Take Highway 99 North to the H Street exit, turn right (East) on to H Street. <br/>
-      Continue down H Street, make a right on to 39th Street. <br/>
-      The school is on the corner of 39th Street and H Street. <br/>
-      Continue south on 39th, the school entrance will be on your right. <br/>
-      To head straight to the first home, continue past the school to J Street, make a left on J Street and then a right on 41st Street.  The first home will be on your right.
+          <p>The tour starts on 47th Street between Folsom Boulevard and M Street. Look for the posted signs! </p>
+          <p>The tour will wind its way through East Sacramento. You may start the home tour at any home, and parking is available outside all the tour homes and at the Holiday Caf&eacute; & Boutique, located at the school.</p>
 
-			<!--
-      Take Highway 99 North to the H street exit. <br>
-      Head east (right) to 39th St. and turn right. <br>
-      The school, Caf&eacute; and Boutique are on your right. Continue down 39th street, take a left on M Street and follow to 41st Street, turn right on 41st and the house will be on your right. -->
-            </p>
-      <p><br>
-        <strong>From San Francisco </strong><br>
-        Take Highway 80 to the Capital City Freeway. <br/>
-        Take the H Street exit, turn right (East)<br/>
-        Head to 39th Street and turn right. The entrance to the school is on your right. <br/>
-        To head straight to the first home, continue down 39th street, take a left on J Street and follow to 41st Street, turn right on 41st and the house will be on your right.
+<p><br><strong>From Auburn/Roseville </strong> <br>
+Take the J Street exit off of the Capital City Freeway and turn right. <br>
+To go straight to the first home, continue east on J Street to 47th Street and turn right, the home will be on your left, close to Folsom Boulevard.</p>
 
-			<!--
-      Take Highway 80 to the Capital City Freeway. <br>
-      Take the H Street exit. <br>
-      Head east (right) to 39th Street and turn right. <br>
-      The school is on your right. Continue down 39th street, take a left on M Street and follow to 41st Street, turn right on 41st and the house will be on your right.
-      -->
-      </p>
+<p><br><strong>From Placerville</strong> <br>
+Take Highway 50 to the 65th Street exit. <br>
+Turn right on 65th Street. <br>
+Go one block to Folsom Boulevard and turn left. <br>
+Go to 47th Street and turn right. <br>
+The home will be on your right, between Folsom Boulevard and M Street.</p>
+
+<p><br><strong>From Stockton and Elk Grove </strong> <br>
+Take Highway 99 North to the H Street exit, turn right (East) on to H Street. <br>
+Continue down H Street, make a right on to 39th Street. <br>
+The school is on the corner of 39th Street and H Street. <br>
+Continue south on 39th, the school entrance will be on your right. <br>
+To head straight to the first home, continue past the school to J Street, make a left on J Street and then a right on 47th Street. The first home will be on your left. </p>
+
+<p><br><strong>From San Francisco </strong> <br>
+Take Highway 80 to the Capital City Freeway. <br>
+Take the H Street exit, turn right (East) <br>
+Head to 39th Street and turn right. The entrance to the school is on your right. <br>
+To head straight to the first home, continue down 39th street, take a left on J Street and follow to 47th Street, turn right on 47th and the house will be on your left close to Folsom Boulevard.</p>
+
+
         </blockquote>
         <P>&nbsp; 
           <!--End main content area -->
