--- a/public/shpsholidayhometour.com/boutique-cafe.htm
+++ b/public/shpsholidayhometour.com/boutique-cafe.htm
@@ -20,49 +20,42 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
         <blockquote> 
           <p align="left"><br/>
             <B><FONT size=3>Holiday Boutique & Caf&eacute;</FONT></B></p>
-           <p>The Holiday Boutique and Caf&eacute; are located at Sacred Heart Parish School at 856-39<sup>th</sup> Street. </p>
-           <p>Shop for one of a kind holiday gifts and dine in a convenient, festive atmosphere. Tour tickets are not required for admission to the Boutique & caf&eacute; - all are welcome.</p>
-           <p>The Holiday Caf&eacute; & Boutique, feature unique gifts & holiday merchandise selected exclusively for Sacred Heart by designers & style experts.</p>
-           <p>While you are there treat yourself to the renowned Home Tour caf&eacute;, featuring tasty sandwiches, fresh salads, toasty soups and gourmet desserts. Specialty coffee, tea, mulled cider, soda, wine and beer are also available.</p>
+           
+
+<p>The Holiday Boutique and Caf&eacute; are located at Sacred Heart Parish School at 856-39th Street. 
+Shop for one of a kind holiday gifts and dine in a convenient, festive atmosphere. Tour tickets are not required for admission to the Boutique & caf&eacute; - all are welcome.</p>
+
+<p>The Holiday Caf&eacute; & Boutique, feature unique gifts & holiday merchandise selected exclusively for Sacred Heart by designers & style experts.</p>
+<p>While you are there treat yourself to the renowned Home Tour caf&eacute;, featuring tasty sandwiches, fresh salads, toasty soups and gourmet desserts. Specialty coffee, tea, mulled cider, soda, wine and beer are also available.</p>
+
 
 <p align="left"><br/>
-            <B><FONT size=3>Boutique Vendors</FONT></B></p>
-            <p>&#8226; The Treasured Home<br/>
-<a href="https://www.thetreasuredhome.com/" target="_blank">www.thetreasuredhome.com</a></p>
+<B><FONT size=3>Boutique Vendors</FONT></B></p>
 
+<p>&#8226; The Treasured Home <br>
+<a href="http://www.thetreasuredhome.com" target="_blank">www.thetreasuredhome.com</a></p>
 <p>&#8226; J. Brian's Valley Harvest</p>
-
 <p>&#8226; Pink House</p>
-<p>&#8226; Design Alchemy<br/>
-<a href="http://designalchemyltd.com/" target="_blank">designalchemyltd.com</a></p>
-
-<p>&#8226; Alllie Studios<br/>
-<a href="http://alliestudio.com/t/sacramento" target="_blank">alliestudio.com/t/sacramento</a></p>
-
-<p>&#8226;  Murphy & Gert</p>
-
+<p>&#8226; Design Alchemy <br>
+<a href="http://designalchemyltd.com" target="_blank">designalchemyltd.com</a></p>
+<p>&#8226; Alllie Studios <br>
+alliestudio.com/t/sacramento</p>
+<p>&#8226; Murphy & Gert</p>
 <p>&#8226; Vintage Pop Art</p>
-
 <p>&#8226; C & C Distributors</p>
-
 <p>&#8226; Serendipity Succulents</p>
-
 <p>&#8226; It's In the Bag</p>
-
 <p>&#8226; Tila Madrigal</p>
-
 <p>&#8226; Rina DeRose</p>
-
 <p>&#8226; The Little Way</p>
-
-<p>&#8226; Renee Luckenbill</p>
-
-<p>&#8226; Beyond the Garden Gate<br/>
-<a href="http://beyondthegardengates.com/" target="_blank">beyondthegardengates.com</a></p>
-
-<p>&#8226; Schola Cantorum</p>
-
+<p>&#8226; Renee Lukenbill</p>
+<p>&#8226; Beyond the Garden Gate <br>
+<a href="http://beyondthegardengates.com" target="_blank">beyondthegardengates.com</a> </p>
 <p>&#8226; Follow the Signs Shop</p>
+<p>&#8226; Puddles A Children's Shoppe</p>
+
+
+
 
 
         </blockquote>
