[updates] link and text updates

--- a/public/shpsholidayhometour.com/boutique-cafe.htm
+++ b/public/shpsholidayhometour.com/boutique-cafe.htm
@@ -22,8 +22,9 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
             <B><FONT size=3>Holiday Boutique & Caf&eacute;</FONT></B></p>
            
 
-<p>The Holiday Boutique and Caf&eacute; are located at Sacred Heart Parish School at 856-39th Street. 
-Shop for one of a kind holiday gifts and dine in a convenient, festive atmosphere. Tour tickets are not required for admission to the Boutique & caf&eacute; - all are welcome.</p>
+<p>The Holiday Boutique and Caf&eacute; are located at Sacred Heart Parish School at 856-39th Street. </p>
+
+<p>Shop for one of a kind holiday gifts and dine in a convenient, festive atmosphere. Tour tickets are not required for admission to the Boutique & caf&eacute; - all are welcome.</p>
 
 <p>The Holiday Caf&eacute; & Boutique, feature unique gifts & holiday merchandise selected exclusively for Sacred Heart by designers & style experts.</p>
 <p>While you are there treat yourself to the renowned Home Tour caf&eacute;, featuring tasty sandwiches, fresh salads, toasty soups and gourmet desserts. Specialty coffee, tea, mulled cider, soda, wine and beer are also available.</p>
@@ -39,7 +40,7 @@ Shop for one of a kind holiday gifts and dine in a convenient, festive atmospher
 <p>&#8226; Design Alchemy <br>
 <a href="http://designalchemyltd.com" target="_blank">designalchemyltd.com</a></p>
 <p>&#8226; Alllie Studios <br>
-alliestudio.com/t/sacramento</p>
+<a href="http://alliestudio.com/t/sacramento" target="_blank">alliestudio.com/t/sacramento</a></p>
 <p>&#8226; Murphy & Gert</p>
 <p>&#8226; Vintage Pop Art</p>
 <p>&#8226; C & C Distributors</p>
