--- a/public/shpsholidayhometour.com/designers.htm
+++ b/public/shpsholidayhometour.com/designers.htm
@@ -27,9 +27,10 @@ Kerrie Kelly Design Lab<br/>
 5704 Elvas Avenue, Sacramento, CA 95819<br/>
 <a href="http://kerriekelly.com" target="_blank">kerriekelly.com</a></p>
 
-<p><strong>Elizabeth Lake Design</strong><br/>
+<p><strong>Elizabeth Lake</strong><br/>
+  Elizabeth Lake Design <br/>
 916-316-7878<br/> 
-<a href="mailto:Elizabeth@lumens.com">Elizabeth@lumens.com</a> <br>
+<!-- <a href="mailto:Elizabeth@lumens.com">Elizabeth@lumens.com</a> <br> -->
 <a href="http://elizabethlakeinteriors.com" target="_blank">elizabethlakeinteriors.com</a>
 </p>
 
