[Updates]add 2017 home pictures and update navigation ZD#63603

--- a/public/shpsholidayhometour.com/boutique.htm
+++ b/public/shpsholidayhometour.com/boutique.htm
@@ -8,7 +8,7 @@ rel=stylesheet>
 cellSpacing=0 cellPadding=4 width=770 border=0>
   <TBODY>
   <TR>
-    <TD class=leftnavtext vAlign=top align=left width=167><!--Start left nav area -->
+    <TD class=leftnavtext vAlign=top align=left width=150> <!--Start left nav area -->
         <div align="center"><BR>
           <BR>
           <p><img src="images/boutique-page1.jpg"  alt="" /></p>
@@ -19,7 +19,7 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
         <!--Start main content area -->
         <blockquote> 
           <p align="left"><br/>
-            <B><FONT size=3>Holiday Boutique & Caf&eacute;</FONT></B></p>
+            <B><FONT size=3>Holiday Boutique</FONT></B></p>
            
 
 <p>The Holiday Boutique and Caf&eacute; are located at Sacred Heart Parish School at 856-39th Street. </p>
