--- a/public/shpsholidayhometour.com/designers.htm
+++ b/public/shpsholidayhometour.com/designers.htm
@@ -28,7 +28,7 @@ Kerrie Kelly Design Lab<br/>
 <a href="http://kerriekelly.com" target="_blank">kerriekelly.com</a></p>
 
 <p><strong>Elizabeth Lake</strong><br/>
-  Elizabeth Lake Design <br/>
+  Elizabeth Lake Interiors <br/>
 916-316-7878<br/> 
 <!-- <a href="mailto:Elizabeth@lumens.com">Elizabeth@lumens.com</a> <br> -->
 <a href="http://elizabethlakeinteriors.com" target="_blank">elizabethlakeinteriors.com</a>
@@ -49,13 +49,12 @@ Residential Interiors, Remodel Management, Custom Cabinetry Design <br/>
 Aimee Hernandez Design <br/>
 <a href="http://aimeehernandezdesign.com" target="_blank">aimeehernandezdesign.com</a></p>
 
-            
-            <!-- <p><strong>Andy Rodriguez Design</strong><br/>
-            Andel & Co.<br/> 
-Design Events Holiday <br/>
-<a href="http://www.andelandco.com/" target="_blank">www.andelandco.com</a>
-            </p>
-            <p><strong>Design Alchemy</strong><br/>
+<p><strong>Leyla Jaworski</strong> <br>
+Design Shop Interiors <br>
+916-205-8258 <br>
+<a href="http://www.designshopinteriors.com" target="_blank">www.designshopinteriors.com</a>
+</p>
+            <!-- <p><strong>Design Alchemy</strong><br/>
 855 57th Street Ste. D, Sacramento, CA 95818<br/>
 <a href="http://designalchemyltd.com" target="_blank">designalchemyltd.com</a></p> 
 
