[Update]footer navigation update

--- a/public/shpsholidayhometour.com/index.html
+++ b/public/shpsholidayhometour.com/index.html
@@ -110,12 +110,13 @@ cellSpacing=0 cellPadding=0 width=800 align=center border=0>
         <div align="center" style="padding-top:2px;">
 <p><FONT color=#ffffff>856 39th Street Sacremento, CA | <!--916.556.5050 |--> <a href="http://sacredhearthometour.com">http://sacredhearthometour.com</a>  <!--www.SHPSHolidayHomeTour.com--></FONT></p>
 <p>
-        <a href="main.html" target="iframe1">WELCOME</a>&nbsp; ::&nbsp; 
-        <a href="tour.htm" target=iframe1></A><a href="tickets.htm" target="iframe1">TICKETS</a>&nbsp; :: &nbsp; 
-        <a href="tour.htm" target=iframe1>THE TOUR</a>&nbsp; ::&nbsp; 
-        <a href="directions.htm" target=iframe1>DIRECTIONS</A>&nbsp; ::&nbsp;&nbsp;
+        <a href="main.html" target="iframe1">WELCOME</a>&nbsp;::&nbsp; 
+        <a href="tickets.htm" target="iframe1">TICKETS</a>&nbsp; :: &nbsp; 
+        <a href="tour.htm" target=iframe1>THE TOUR</a>&nbsp;::&nbsp; 
+        <a href="directions.htm" target=iframe1>DIRECTIONS</A>&nbsp; ::&nbsp;
         <a href="homes.htm" target=iframe1>HOMES</a>&nbsp; ::&nbsp; 
-        <a href="designers.htm" target=iframe1>DESIGNERS</a>&nbsp; ::&nbsp; SPONSORS&nbsp;&nbsp;::&nbsp;&nbsp;
+        <a href="designers.htm" target=iframe1>DESIGNERS</a>&nbsp; ::&nbsp; 
+        <a href="sponsors.htm" target=iframe1>SPONSORS</a>&nbsp;::&nbsp;
         <a href="boutique.htm" target=iframe1>Boutique</a>&nbsp; ::&nbsp; 
         <a href="cafe.htm" target=iframe1>Caf&eacute;</a>
         
