[Updates]new year content updates zd#63828

--- a/public/shpsholidayhometour.com/boutique.htm
+++ b/public/shpsholidayhometour.com/boutique.htm
@@ -1,11 +1,18 @@
 <HTML><HEAD>
 <META http-equiv=Content-Type content="text/html; charset=windows-1252">
-<META content=no-cache><LINK href="files/hhtCSS.css" type=text/css 
-rel=stylesheet>
-<META content= name=GENERATOR><title>Holiday Home Tour</title></HEAD>
+<META content=no-cache>
+<LINK href="files/hhtCSS.css" type=text/css rel=stylesheet>
+<META content= name=GENERATOR>
+<title>Holiday Home Tour</title>
+<style type="text/css" media="screen">
+.twocolumn li{float:left; width:48%; margin-right:4%; margin-bottom:2%;}
+.twocolumn li:nth-child(2n){margin-right:0;}
+.twocolumn li:nth-child(2n+1){clear:left;}  
+.space10{height:10px; font-size:1px; line-height:1px;clear: both;}
+</style>
+</HEAD>
 <BODY leftMargin=0 background=images/back_line.gif topMargin=0>
-<TABLE id=AutoNumber1 style="BORDER-COLLAPSE: collapse" borderColor=#111111 
-cellSpacing=0 cellPadding=4 width=770 border=0>
+<TABLE id=AutoNumber1 style="BORDER-COLLAPSE: collapse" borderColor=#111111 cellSpacing=0 cellPadding=4 width=770 border=0>
   <TBODY>
   <TR>
     <TD class=leftnavtext vAlign=top align=left width=150> <!--Start left nav area -->
@@ -32,7 +39,7 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
 
 <p align="left"><br/>
 <B><FONT size=3>Boutique Vendors</FONT></B></p>
-
+<!--
 <p>&#8226; The Treasured Home <br>
 <a href="http://www.thetreasuredhome.com" target="_blank">www.thetreasuredhome.com</a></p>
 <p>&#8226; J. Brian's Valley Harvest</p>
@@ -54,10 +61,40 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
 <a href="http://beyondthegardengates.com" target="_blank">beyondthegardengates.com</a> </p>
 <p>&#8226; Follow the Signs Shop</p>
 <p>&#8226; Puddles A Children's Shoppe</p>
+-->
+<ul class="twocolumn" style="padding-left:16px;">
+<li>The Treasured Home <br>
+<a href="http://www.thetreasuredhome.com" target="_blank">www.thetreasuredhome.com</a></li>
+<li>Alllie Studios <br>
+<a href="http://alliestudio.com/t/sacramento" target="_blank">alliestudio.com/t/sacramento</a></li>
+<li>Beyond the Garden Gate <br>
+<a href="http://beyondthegardengates.com" target="_blank">beyondthegardengates.com</a> </li>
+<li>J. Brian's Valley Harvest</li>
+<li>Murphy & Gert</li>
+<li>Vintage Pop Art</li>
+<li>C & C Distributors</li>
+<li>Serendipity Succulents</li>
+<li>It's In the Bag</li>
+<li>Tila Madrigal</li>
+<li>Rina DeRose</li>
+<li>Follow the Signs Shop</li>
+<li>Puddles A Children's Shoppe</li>
+<li>Dolce Mia</li>
+<li>Ruby Dot Designs</li>
+<li>Gatherings</li>
+<li>Bueno Sport & Swim</li>
+<li>Mono Mia</li>
+<li>Laurie & Nancy Crafts</li>
+<li>The White Barn</li>
+<li>Gina Savala Jewelry</li>
+<li>Linda & Michelle Crafts</li>
+<li>Lara the Calligraphy Girl</li>
+<li>Aimee Hernandez Designs</li>
+<li>Vivi Jewelry</li>
+<li>Balance Within</li>
+</ul>
 
-
-
-
+<p class="space10"></p>
 
         </blockquote>
         
