--- a/public/shpsholidayhometour.com/designers.htm
+++ b/public/shpsholidayhometour.com/designers.htm
@@ -43,10 +43,13 @@ Katrina Stumbos Interior Design <br/>
 <p><strong>Christi Ensberg</strong> <br/>
 Simplify Interiors <br/>
 Residential Interiors, Remodel Management, Custom Cabinetry Design <br/>
-858-829-9403</p>
+916-337-2534 <br>
+<a href="http://www.simplifywithchristiensberg.com" target="_blank">simplifywithchristiensberg.com</a>
+</p>
 
 <p><strong>Aimee Hernandez</strong> <br/>
 Aimee Hernandez Design <br/>
+916-718-2950 <br>
 <a href="http://aimeehernandezdesign.com" target="_blank">aimeehernandezdesign.com</a></p>
 
 <p><strong>Leyla Jaworski</strong> <br>
