[update]ticket vendors list ZD#64461

--- a/public/shpsholidayhometour.com/boutique.htm
+++ b/public/shpsholidayhometour.com/boutique.htm
@@ -63,6 +63,8 @@
 <p>&#8226; Puddles A Children's Shoppe</p>
 -->
 <ul class="twocolumn" style="padding-left:16px;">
+<li>Suzy Pierce Art<br>
+<a href="http://www.pierceart.com/" target="_blank">www.pierceart.com</a></li>
 <li>The Treasured Home <br>
 <a href="http://www.thetreasuredhome.com" target="_blank">www.thetreasuredhome.com</a></li>
 <li>Alllie Studios <br>
