[Update] Content change for designer page

--- a/public/shpsholidayhometour.com/designers.htm
+++ b/public/shpsholidayhometour.com/designers.htm
@@ -19,56 +19,33 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
         <!--Start main content area -->
         <blockquote>
           <p align="left"><BR>
-            <B><FONT size=3>The Designers
+            <B><FONT size=3>The Designers 2018
             </FONT></B></p>
             <!--<p>Coming Soon!</p>-->
-            <p><strong>Kerrie Kelly</strong><br/>
-Kerrie Kelly Design Lab<br/>
-5704 Elvas Avenue, Sacramento, CA 95819<br/>
-<a href="http://kerriekelly.com" target="_blank">kerriekelly.com</a></p>
+            <p><strong>Aimee Hernandez </strong><br/>
+            Aimee Hernandez Design <br/>
+            916-718-2950 <br/>
+            <a href="http://aimeehernandezdesign.com/" target="_blank">aimeehernandezdesign.com</a></p>
 
-<p><strong>Elizabeth Lake</strong><br/>
-  Elizabeth Lake Interiors <br/>
-916-316-7878<br/> 
-<!-- <a href="mailto:Elizabeth@lumens.com">Elizabeth@lumens.com</a> <br> -->
-<a href="http://elizabethlakeinteriors.com" target="_blank">elizabethlakeinteriors.com</a>
-</p>
+            <p><strong>Leyla Jaworski</strong><br/>
+            Design Shop Interiors <br/>
+            916-205-8258<br/> 
+            <a href="http://designshopinteriors.com/" target="_blank">designshopinteriors.com</a>
+            </p>
+            <p><strong>Katrina Stumbos </strong> <br/>
+            Katrina Stumbos Interior Design <br/>
+            916-802-8968  <br/>
+            <a href="http://katrinastumbos.com" target="_blank">katrinastumbos.com</a></p>
+            <p><strong>Victoria Tanforan</strong> <br/>
+            Pacific Design Group <br/>
+            916-779-1115 <br>
+            <a href="https://pdginteriors.com/" target="_blank">pdginteriors.com</a>
+            </p>
+            <p><strong>Rebecca Ward</strong> <br/>
+            Rebecca Ward Design <br/>
+            916-668-9590 <br>
+            <a href="http://rwarddesign.com" target="_blank">rwarddesign.com</a></p>
 
-
-<p><strong>Katrina Stumbos</strong> <br/>
-Katrina Stumbos Interior Design <br/>
-916-802-8968 <br/>
-<a href="http://katrinastumbos.com" target="_blank">katrinastumbos.com</a></p>
-
-<p><strong>Christi Ensberg</strong> <br/>
-Simplify Interiors <br/>
-Residential Interiors, Remodel Management, Custom Cabinetry Design <br/>
-916-337-2534 <br>
-<a href="http://www.simplifywithchristiensberg.com" target="_blank">simplifywithchristiensberg.com</a>
-</p>
-
-<p><strong>Aimee Hernandez</strong> <br/>
-Aimee Hernandez Design <br/>
-916-718-2950 <br>
-<a href="http://aimeehernandezdesign.com" target="_blank">aimeehernandezdesign.com</a></p>
-
-<p><strong>Leyla Jaworski</strong> <br>
-Design Shop Interiors <br>
-916-205-8258 <br>
-<a href="http://www.designshopinteriors.com" target="_blank">www.designshopinteriors.com</a>
-</p>
-            <!-- <p><strong>Design Alchemy</strong><br/>
-855 57th Street Ste. D, Sacramento, CA 95818<br/>
-<a href="http://designalchemyltd.com" target="_blank">designalchemyltd.com</a></p> 
-
-<p><strong>Beyond the Garden Gate</strong><br/>
-1015 Olive Drive, Davis, CA 95616<br/>
-<a href="http://www.beyondthegardengates.com" target="_blank">beyondthegardengates.com</a></p>
-
-
- <p><strong>Kristine Renee Designs</strong><br/>
-2413 J Street, Sacramento, 95816<br/>
-<a href="http://www.kristinerenee.com" target="_blank">www.kristinerenee.com</a></p> -->
 
 
           </blockquote>
