[Update] add link on home page for cafe and boutique

--- a/public/shpsholidayhometour.com/main.html
+++ b/public/shpsholidayhometour.com/main.html
@@ -132,13 +132,13 @@ window.onload=initializemarquee
       <dl>
        <dd style="float:left; width:250px; padding:0px; margin:0px;">
          <p>Friday, <br/>November 30<sup>th</sup>: 12 p.m. to 8 p.m.<br>
-         Caf&eacute; & Boutique: 12p.m. to 8 p.m.</p>
+         <a href="cafe.htm"><strong>Caf&eacute;</strong></a> & <a href="boutique.htm"><strong>Boutique</strong></a>: 12p.m. to 8 p.m.</p>
 
          <p>Saturday, <br/>December 1<sup>st</sup>: 10 a.m. to 7 p.m. <br>
-         Caf&eacute; & Boutique 10 a.m. to 7 p.m.</p>
+          <a href="cafe.htm"><strong>Caf&eacute;</strong></a> & <a href="boutique.htm"><strong>Boutique</strong></a>: 10 a.m. to 7 p.m.</p>
          
          <p>Sunday, <br/>December 2<sup>nd</sup>: 11 a.m. to 5 p.m.<br>
-         Caf&eacute; & Boutique 11 a.m. to 5 p.m.</p>
+          <a href="cafe.htm"><strong>Caf&eacute;</strong></a> & <a href="boutique.htm"><strong>Boutique</strong></a>: 11 a.m. to 5 p.m.</p>
 
        </dd>
        <!--
@@ -155,7 +155,7 @@ window.onload=initializemarquee
 
 <p>This year the self-guided walking tour begins on 46th  Street between J Street and M Street and winds its way through East Sacramento ending on 38th  Street between Folsom and M Street. You may start at any home and the tour takes approximately two hours to complete depending on your pace. Participating home addresses and a neighborhood map is printed on the back of each ticket.</p>
 
-<p>Following the tour, don't miss the beloved Holiday Boutique and Caf&eacute; located at Sacred Heart Parish School. Our boutique is made up of local Northern California vendors selling traditional and unique holiday gifts and decorations. Refuel your tank with a variety of delicious sandwiches and salads or warm up with a hot and flavorful soup. Hot Mulled Cider, coffee, soft drinks, wine and beer are also served. This year we will also feature a new Champagne bar on Friday and Saturday, 4pm to close, so come by enjoy a glass of bubbly! No ticket is required to visit the Holiday Boutique, Caf&eacute;, or Champagne bar.</p>
+<p>Following the tour, don't miss the beloved Holiday <a href="boutique.htm"><strong>Boutique</strong></a> and <a href="cafe.htm"><strong>Caf&eacute;</strong></a> located at Sacred Heart Parish School. Our boutique is made up of local Northern California vendors selling traditional and unique holiday gifts and decorations. Refuel your tank with a variety of delicious sandwiches and salads or warm up with a hot and flavorful soup. Hot Mulled Cider, coffee, soft drinks, wine and beer are also served. This year we will also feature a new Champagne bar on Friday and Saturday, 4pm to close, so come by enjoy a glass of bubbly! No ticket is required to visit the Holiday Boutique, Caf&eacute;, or Champagne bar.</p>
 
 <p>You may use your ticket for a one-time admittance to each house any time during the home tour weekend. Tickets are $30 in advance and $35 the day of the event. Children over the age of one must have a ticket. Advance tickets can be purchased on-line or at a number of fine local retailers until Thursday night prior to the tour start. Please visit the <a href="tickets.htm"><strong>TICKETS TAB</strong></a> located on this site for online purchases or a list of retail locations.</p>
 
