[Update] Sponsors logo change

--- a/public/shpsholidayhometour.com/main.html
+++ b/public/shpsholidayhometour.com/main.html
@@ -65,27 +65,26 @@ window.onload=initializemarquee
         <!--Start left nav area -->
         <div id="marqueecontainer" onMouseover="copyspeed=pausespeed" onMouseout="copyspeed=marqueespeed">
         <div id="vmarquee" style="position: absolute; width: 98%;">
-        <!-- <p><img src="images/northwind_logo_small.jpg"  alt="" /></p> -->
-        <p><img src="images/logos/rich-cazneaux-big.jpg" width="150px"  alt="" /></p>
-        <p><img src="images/woolford_group_logo_small.jpg"  alt="" /></p>
-        <p><img src="images/senior_care_logo_small.jpg"  alt="" /></p>
-        <p><img src="images/eastsac_logo_small.jpg"  alt="" /></p>
-        <p><img src="images/szymanowski.jpg" alt=""></p>
-         <p><img src="images/laser_logo_small.png"  alt="" /></p>
-         <p><img src="images/logos/tim-collom-big-n.jpg" width="150px" /></p>
-         <p><img src="images/wells.png"  alt="" /></p> 
-         <p><img src="images/logo-moranstanley.png"  alt="" /></p>
-         <p><img src="images/logo-eldorado-small.jpg"></p>
-         <p><img src="images/kris-quigley-small-n.jpg"/></p>
-         <p><img src="images/logos/logo_todd2.png" alt="" /></p>
-         <p><img src="images/capital-small.jpg" /></p>
-         <p><img src="images/d2c-small.jpg" /></p>
-         <p><img src="images/polly-sanders.jpg" alt="" /></p>
-         
-         
+          <p><img src="images/woolford_group_logo_small.jpg"  alt="" /></p>
+          <p><img src="images/logos/logo_todd2.png" alt="" /></p>
+          <p><img src="images/logos/tim-collom-big-n.jpg" width="150px" /></p>
+          <p><img src="images/szymanowski.jpg" alt=""></p>
+          <p><img src="images/senior_care_logo_small.jpg"  alt="" /></p>
+          <p><img src="images/logos/rich-cazneaux-big.jpg" width="150px"  alt="" /></p>
+          <p><img src="images/polly-sanders.jpg" alt="" /></p>
+          <p><img src="images/mansours.jpg" alt="" /></p>
+          <p><img src="images/logo-eldorado-small.jpg"></p>
+          <p><img src="images/eastsac_logo_small.jpg"  alt="" /></p>
+          <p><img src="images/d2c.jpg" /></p>
+          <p><img src="images/laser_logo_small.png"  alt="" /></p>
+          <p><img src="images/morgan-stanley.jpg"  alt="" /></p>
+          <p><img src="images/capital-small.jpg" /></p>
         </div>
-        </div>
-        <!--
+      </div>
+      <!--
+        <p><img src="images/wells.png"  alt="" /></p> 
+        <p><img src="images/kris-quigley-small-n.jpg"/></p>
+        <p><img src="images/northwind_logo_small.jpg"  alt="" /></p>
         <p><img src="images/logo_mansoursmall.png"  alt="" /></p>
         <p><img src="images/sara-small.jpg"/></p>
         <p><img src="images/marisa_monahan_logo_small.jpg"></p>
