Update Direction page update

--- a/public/shpsholidayhometour.com/directions.htm
+++ b/public/shpsholidayhometour.com/directions.htm
@@ -20,32 +20,38 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
         <blockquote> 
           <p align="left"><br>
             <B><FONT size=3>Directions to the Tour</FONT></B></p>
-          <p>The tour starts on 47th Street between Folsom Boulevard and M Street. Look for the posted signs! </p>
-          <p>The tour will wind its way through East Sacramento. You may start the home tour at any home, and parking is available outside all the tour homes and at the Holiday Caf&eacute; & Boutique, located at the school.</p>
+          <p>The tour starts on 46th Street between J Street and M Street. Look for the posted signs!</p>        
+          <p>The tour will wind its way through East Sacramento. You may start the Home Tour at any home, and parking is available outside all the tour homes and at the Holiday Caf&eacute; & Boutique, located at Sacred Heart Parish School (856 39th Street).</p>
 
-<p><br><strong>From Auburn/Roseville </strong> <br>
-Take the J Street exit off of the Capital City Freeway and turn right. <br>
-To go straight to the first home, continue east on J Street to 47th Street and turn right, the home will be on your left, close to Folsom Boulevard.</p>
+<p><br><strong>From Auburn/Roseville</strong> <br>
+Take the J Street exit off of the Capital City Freeway and turn left.<br>
+Continue down J Street, make a left on to 39th Street.<br> 
+The School is on the corner of 39th Street and H Street.<br> 
+To go straight to the first home, continue east on J Street to 46th Street and turn right, the home will be on your right, between J Street and M Street.
+</p>
 
-<p><br><strong>From Placerville</strong> <br>
-Take Highway 50 to the 65th Street exit. <br>
-Turn right on 65th Street. <br>
-Go one block to Folsom Boulevard and turn left. <br>
-Go to 47th Street and turn right. <br>
-The home will be on your right, between Folsom Boulevard and M Street.</p>
+<p><br><strong>From Placerville </strong> <br>
+  Take Highway 50 to the 65th Street exit.<br> 
+  Turn right on 65th Street.<br> 
+  Go one block to Folsom Boulevard and turn left.<br> 
+  Go to 46th Street and turn right.<br> 
+  The home will be on your left, between M Street and J Street.
+</p>
 
 <p><br><strong>From Stockton and Elk Grove </strong> <br>
-Take Highway 99 North to the H Street exit, turn right (East) on to H Street. <br>
-Continue down H Street, make a right on to 39th Street. <br>
-The school is on the corner of 39th Street and H Street. <br>
-Continue south on 39th, the school entrance will be on your right. <br>
-To head straight to the first home, continue past the school to J Street, make a left on J Street and then a right on 47th Street. The first home will be on your left. </p>
+  Take Highway 99 North to the H Street exit, turn right (East) on to H Street.<br> 
+  Continue down H Street, make a right on to 39th Street.<br> 
+  The School is on the corner of 39th Street and H Street.<br> 
+  Continue South on 39th, the School entrance will be on your right.<br> 
+  To go straight to the first home, continue East on J Street to 46th Street and turn right, the home will be on your right, between J Street and M Street.
+</p>
 
-<p><br><strong>From San Francisco </strong> <br>
-Take Highway 80 to the Capital City Freeway. <br>
-Take the H Street exit, turn right (East) <br>
-Head to 39th Street and turn right. The entrance to the school is on your right. <br>
-To head straight to the first home, continue down 39th street, take a left on J Street and follow to 47th Street, turn right on 47th and the house will be on your left close to Folsom Boulevard.</p>
+<p><br><strong>From San Francisco</strong> <br>
+  Take Highway 80 to the Capital City Freeway.<br> 
+  Take the H Street exit, turn right (East)<br> 
+  Head to 39th Street and turn right. The entrance to the School is on your right. <br>
+  To go straight to the first home, continue east on J Street to 46th Street and turn right, the home will be on your right, between J Street and M Street.
+</p>
 
 
         </blockquote>
