Add photos on ticket, tour, direction and designers pages

--- a/public/shpsholidayhometour.com/designers.htm
+++ b/public/shpsholidayhometour.com/designers.htm
@@ -10,9 +10,10 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
   <TR>
       <TD class=leftnavtext vAlign=top align=left width=160> 
         <!--Start left nav area -->
-        <p><img src="images/designers-page1.jpg"  alt="" /></p>
-        <p><img src="images/designers-page2.jpg"  alt="" /></p>
-        <p><img src="images/designers-page3.jpg"  alt="" /></p>
+        <p><a href="images/2018/ht-14.jpg" target="_blank"><img src="images/2018/hts-14.jpg"  alt="" /></a></p>
+        <p><a href="images/2018/ht-21.jpg" target="_blank"><img src="images/2018/hts-21.jpg"  alt="" /></a></p>
+        <p><a href="images/2018/ht-22.jpg" target="_blank"><img src="images/2018/hts-22.jpg"  alt="" /></a></p>
+        <p>Photo credit of Sacramento Real Estate Photographers</p>    
        
         <P align=center>&nbsp;</P></TD>
       <TD class=bodytext vAlign=top width=594> 
