--- a/public/shpsholidayhometour.com/directions.htm
+++ b/public/shpsholidayhometour.com/directions.htm
@@ -11,10 +11,11 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
       <td class=leftnavtext vAlign=top align=left width=160> 
         <!--Start left nav area -->
         <div align="center">
-        <p><img src="images/directions-page1.jpg"  alt="" /></p>
-        <p><img src="images/directions-page2.jpg"  alt="" /></p>
-        <p><img src="images/directions-page3.jpg"  alt="" /></p>
-        </td>
+        <p><a href="images/2018/ht-23.jpg" target="_blank"><img src="images/2018/hts-23.jpg"  alt="" /></a></p>
+        <p><a href="images/2018/ht-25.jpg" target="_blank"><img src="images/2018/hts-25.jpg"  alt="" /></a></p>
+        <p><a href="images/2018/ht-33.jpg" target="_blank"><img src="images/2018/hts-33.jpg"  alt="" /></a></p>
+        <p>Photo credit of Sacramento Real Estate Photographers</p>    
+      </td>
       <TD class=bodytext vAlign=top width=594> 
         <!--Start main content area -->
         <blockquote> 
