--- a/public/shpsholidayhometour.com/tour.htm
+++ b/public/shpsholidayhometour.com/tour.htm
@@ -10,10 +10,12 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
   <TR>
     <TD class=leftnavtext vAlign=top align=left width=163><!--Start left nav area -->
       <BR>
-        <p><img src="images/tour-page1.jpg"  alt="" /></p>
-        <p><img src="images/tour-page2.jpg"  alt="" /></p>
-        <p><img src="images/tour-page3.jpg"  alt="" /></p>
-        </TD>
+        <p><a href="images/2018/ht-8.jpg" target="_blank"><img src="images/2018/hts-8.jpg"  alt="" /></a></p>
+        <p><a href="images/2018/ht-9.jpg" target="_blank"><img src="images/2018/hts-9.jpg"  alt="" /></a></p>
+        <p><a href="images/2018/ht-10.jpg" target="_blank"><img src="images/2018/hts-10.jpg"  alt="" /></a></p>
+        <p>Photo credit of Sacramento Real Estate Photographers</p>    
+
+      </TD>
       <TD class=bodytext vAlign=top width=591> 
         <!--Start main content area -->
         <blockquote> 
