--- a/public/shpsholidayhometour.com/tickets.htm
+++ b/public/shpsholidayhometour.com/tickets.htm
@@ -12,11 +12,11 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
   <TR>
       <TD class=leftnavtext vAlign=top align=left width=165>
         <!--Start left nav area -->
-        <p><img src="images/tickets-page1.jpg"  alt="" /></p>
-        <p><img src="images/tickets-page2.jpg"  alt="" /></p>
-        <BR> 
-  <!--<br><font color="#990000" size="1"><strong>Holiday Home Tour Ticket Sales</strong></font></p>-->
-	  </TD>
+        <p><a href="images/2018/ht-2.jpg" target="_blank"><img src="images/2018/hts-2.jpg"  alt="" /></a></p>
+        <p><a href="images/2018/ht-4.jpg" target="_blank"><img src="images/2018/hts-4.jpg"  alt="" /></a></p>
+        <p><a href="images/2018/ht-7.jpg" target="_blank"><img src="images/2018/hts-7.jpg"  alt="" /></a></p>
+        <p>Photo credit of Sacramento Real Estate Photographers</p>    
+	    </TD>
       <TD class=bodytext vAlign=top width=589>
         <!--Start main content area -->
         <blockquote> 
