Update cafe page

--- a/public/shpsholidayhometour.com/cafe.htm
+++ b/public/shpsholidayhometour.com/cafe.htm
@@ -50,7 +50,7 @@ Served with either soup or Caesar Salad</p>
 
 <h3>ASSORTED GOURMET DESSERTS</h3>
 <p>Provided by: <br>
-Bennett’s Bakery, The Shack, Fat Cat</p>
+Bennett’s Bakery, The Shack, Fat Cat, Nothing Bundt Cakes</p>
 
 
 <h3>BEVERAGES</h3>
