Update sponser logo

--- a/public/shpsholidayhometour.com/main.html
+++ b/public/shpsholidayhometour.com/main.html
@@ -79,6 +79,7 @@ window.onload=initializemarquee
           <p><img src="images/laser_logo_small.png"  alt="" /></p>
           <p><img src="images/morgan-stanley.jpg"  alt="" /></p>
           <p><img src="images/capital-small.jpg" /></p>
+          <p><img src="images/bacon_and_butter.jpg" /></p>
         </div>
       </div>
       <!--
