--- a/public/shpsholidayhometour.com/sponsors.htm
+++ b/public/shpsholidayhometour.com/sponsors.htm
@@ -46,6 +46,12 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
           <td><img src="images/logos/logo_capital.png"/> </td>  
 
         </tr>
+        <tr>
+          <td><img src="images/bacon_and_butter-big.jpg"/>
+            
+          <td> </td>  
+
+        </tr>
         
         <!--
         <tr>          
