[Update] Sponsors logo

--- a/public/shpsholidayhometour.com/main.html
+++ b/public/shpsholidayhometour.com/main.html
@@ -69,8 +69,8 @@ window.onload=initializemarquee
           <p><img src="images/logos/logo_todd2.png" alt="" /></p>
           <p><img src="images/logos/tim-collom-big-n.jpg" width="150px" /></p>
           <p><img src="images/szymanowski.jpg" alt=""></p>
-          <p><img src="images/senior_care_logo_small.jpg"  alt="" /></p>
-          <p><img src="images/logos/rich-cazneaux-big.jpg" width="150px"  alt="" /></p>
+          <p><img src="images/senior_care_logo.jpg"  alt="" /></p>
+          <p><img src="images/rich-cazneaux.jpg" width="150px"  alt="" /></p>
           <p><img src="images/polly-sanders.jpg" alt="" /></p>
           <p><img src="images/mansours.jpg" alt="" /></p>
           <p><img src="images/logo-eldorado-small.jpg"></p>
@@ -80,6 +80,7 @@ window.onload=initializemarquee
           <p><img src="images/morgan-stanley.jpg"  alt="" /></p>
           <p><img src="images/capital-small.jpg" /></p>
           <p><img src="images/bacon_and_butter.jpg" /></p>
+          <p><img src="images/sacramento.jpg" /></p>
         </div>
       </div>
       <!--
