--- a/public/shpsholidayhometour.com/sponsors.htm
+++ b/public/shpsholidayhometour.com/sponsors.htm
@@ -26,8 +26,8 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
           <td><img src="images/logos/szymanowski-big.jpg"/></td>
         </tr>
         <tr>
-          <td><img src="images/logos/senior_care_logo.jpg"/></td>
-          <td><img src="images/logos/rich-cazneaux-big.jpg"/></td>
+          <td><img src="images/senior_care_logo-big.jpg"/></td>
+          <td><img src="images/rich-cazneaux-big.jpg"/></td>
         </tr>
         <tr>
           <td><img src="images/logos/polly-sanders-big.jpg"/></td>
@@ -47,10 +47,8 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
 
         </tr>
         <tr>
-          <td><img src="images/bacon_and_butter-big.jpg"/>
-            
-          <td> </td>  
-
+          <td><img src="images/bacon_and_butter-big.jpg"/></td>            
+          <td><img src="images/sacramento-big.jpg"/></td>  
         </tr>
         
         <!--
