test git and fix 404 on homes.htm page

--- a/public/shpsholidayhometour.com/tickets.htm
+++ b/public/shpsholidayhometour.com/tickets.htm
@@ -12,9 +12,9 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
   <TR>
       <TD class=leftnavtext vAlign=top align=left width=165>
         <!--Start left nav area -->
-        <p><a href="images/2018/ht-2.jpg" target="_blank"><img src="images/2018/hts-2.jpg"  alt="" /></a></p>
-        <p><a href="images/2018/ht-4.jpg" target="_blank"><img src="images/2018/hts-4.jpg"  alt="" /></a></p>
-        <p><a href="images/2018/ht-7.jpg" target="_blank"><img src="images/2018/hts-7.jpg"  alt="" /></a></p>
+        <p><a href="images/2018/ht-2.jpg" data-fancybox target="_blank"><img src="images/2018/hts-2.jpg"  alt="" /></a></p>
+        <p><a href="images/2018/ht-4.jpg" data-fancybox target="_blank"><img src="images/2018/hts-4.jpg"  alt="" /></a></p>
+        <p><a href="images/2018/ht-7.jpg" data-fancybox target="_blank"><img src="images/2018/hts-7.jpg"  alt="" /></a></p>
         <p>Photo credit of Sacramento Real Estate Photographers</p>    
 	    </TD>
       <TD class=bodytext vAlign=top width=589>
