[Add] KMG Sponsors logo

--- a/public/shpsholidayhometour.com/main.html
+++ b/public/shpsholidayhometour.com/main.html
@@ -80,6 +80,7 @@ window.onload=initializemarquee
           <p><img src="images/capital-small.jpg" /></p>
           <p><img src="images/bacon_and_butter.jpg" /></p>
           <p><img src="images/sacramento.jpg" /></p>
+          <p><img src="images/logos/KMG_logo_small.jpg" /></p>
         </div>
       </div>
       <!--
