--- a/public/shpsholidayhometour.com/sponsors.htm
+++ b/public/shpsholidayhometour.com/sponsors.htm
@@ -50,6 +50,10 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
           <td><img src="images/bacon_and_butter-big.jpg"/></td>            
           <td><img src="images/sacramento-big.jpg"/></td>  
         </tr>
+        <tr>
+          <td><img src="images/logos/logo_KMG.jpg"/></td>            
+          <td>&nbsp;</td>  
+        </tr>
         
         <!--
         <tr>          
